
New features:
...G...... [ZBX-6040] added support of Windows 8 and Windows Server 2012 for system.uname check (Sasha)
A.F....... [ZBX-1357] updated American English, Brazilian Portuguese, French, Japanese, Latvian, Russian and Turkish translations; thanks to Zabbix translators (Richlv)
.......PS. [ZBX-5920] added prefetching of 2 MB of data for Oracle SQL selects (dimir)

Bug fixes:
..F....... [ZBX-6027] fixed global notification messages don't work in fullscreen frontend mode (Toms)
..F....... [ZBX-6037] fixed duplicate frontend messages and changed frontend messages to show last event for 15 triggers instead of last 15 events (Oleg)
A.F....... [ZBX-5900] fixed date validation in services and maintenances, fixed JS calendar and fixed maintenance periods validation (Oleg)
..F....... [ZBX-5835] fixed possible "Undefined index" in Configuration -> Actions screen (Sasha)
..F....... [ZBX-5986] fixed page filter to not use remembered group if selected host is not in that group (Toms)
..F....... [ZBX-6013] fixed table layout in Monitoring -> IT services for IE10 (Toms)
A......... [ZBX-5977] removed possibility to add an LLD rule to an application via the API in application and discovery rule (Oleg)
....I..... [ZBX-5938] removed orphaned trigger from default data set (Alexei)
.D........ [ZBXNEXT-894] fixed generate_events comment to say that events are generated after maintenance if trigger changed its state during the maintenance at all (Richlv)
.......PS. [ZBX-5988] fixed memory leak in functions evaluate_LOGEVENTID(), evaluate_STR(), DBlld_process_discovery_rule(). Thanks to Takanori Suzuki for patch (Andris, Sasha)
...G...... [ZBX-5940] fixed displaying default key parameters when agent is used with option -p (Andris)
.......PS. [ZBX-5981] fixed incorrect use of function assert() if build option -DNDEBUG was used, it caused random crashes (Alexei)
.......PS. [ZBX-3379] added SourceIP support for SNMP items (dimir)